# myjit

./: .gitignore  CMakeLists.txt  Makefile  demo1.c  make.bat
disasm/: Makefile  make.bat  myjit-disasm.c
disasm/arm32/: Makefile  arm32-dis.c  arm32-dis.h  make.bat
disasm/sparc/: make.bat
disasm/udis86/: make.bat
doc/: README  TODO  readme.htm
extras/: add-op-aliases.h
extras/arm/: dpiops.sh
junk/: opcodes-debugger.c
myjit/: CMakeLists.txt  amd64-codegen.h  amd64-specific.h  arm32-codegen.h  arm32-specific.h  code-check.c  common86-codegen.h  common86-specific.h  cpu-detect.h  flow-analysis.h  jitlib-core.c  jitlib-core.h  jitlib-debug.c  jitlib-debug.h  jitlib.h  llrb.c  llrb.h  platform.h  reg-allocator.h  rmap.h  set.h  sparc-specific.h  sse2-specific.h  util.h  x86-codegen.h  x86-common-stuff.c  x86-specific.h
myjit/win/: wait.h
test/: Makefile  run-tests.sh  simple-buffer.c  t001-basics.c  t002-arithmetic.c  t005-functions.c  t006-misc.c  t010-debug.c  t101-fp-basics.c  t104-fp-branches.c  t105-fp-functions.c  t107-fp-args.c  t109-fp-allocaireg.c  t401-data-in-code.c  t402-transfers.c  t501-flow-analysis-stress-test.c  tests.h
